@@ -1208,6 +1208,62 @@ SELECT layer_id(findLayer('features.land_parcels', 'feature'));
 				<para><xref linkend="FindTopology"/></para>
 			</refsection>
 		</refentry>
+
+		<refentry xml:id="TotalTopologySize">
+			<refnamediv>
+				<refname>TotalTopologySize</refname>
+
+				<refpurpose>Total disk space used by the specified topology, including all indexes and TOAST data.</refpurpose>
+			</refnamediv>
+
+			<refsynopsisdiv>
+				<funcsynopsis>
+					<funcprototype>
+					<funcdef>int8 <function>TotalTopologySize</function></funcdef>
+					<paramdef><type>name </type> <parameter>toponame</parameter></paramdef>
+					</funcprototype>
+				</funcsynopsis>
+			</refsynopsisdiv>
+
+			<refsection>
+                <title>Description</title>
+
+                <para>
+Takes a topology name and provides the total
+disk space used by all its tables, including indexes and TOAST data.
+                </para>
+
+                <!-- use this format if new function -->
+                <para role="availability" conformance="3.6.0">Availability: 3.6.0</para>
+			</refsection>
+
+
+			<refsection>
+				<title>Examples</title>
+				<programlisting>SELECT topology.topologysummary('city_data');
+                    topologysummary
+--------------------------------------------------------
+ Topology city_data (329), SRID 4326, precision: 0
+ 22 nodes, 24 edges, 10 faces, 29 topogeoms in 5 layers
+ Layer 1, type Polygonal (3), 9 topogeoms
+  Deploy: features.land_parcels.feature
+ Layer 2, type Puntal (1), 8 topogeoms
+  Deploy: features.traffic_signs.feature
+ Layer 3, type Lineal (2), 8 topogeoms
+  Deploy: features.city_streets.feature
+ Layer 4, type Polygonal (3), 3 topogeoms
+  Hierarchy level 1, child layer 1
+  Deploy: features.big_parcels.feature
+ Layer 5, type Puntal (1), 1 topogeoms
+  Hierarchy level 1, child layer 2
+  Deploy: features.big_signs.feature</programlisting>
+			</refsection>
+			<!-- Optionally add a "See Also" section -->
+			<refsection>
+				<title>See Also</title>
+				<para><xref linkend="Topology_Load_Tiger"/></para>
+			</refsection>
+		</refentry>
 	</section>
 
 	<section xml:id="Topology_StatsManagement" xreflabel="maintaining statistics during topology editing and population">
