@@ -1,0 +1,3 @@
+t0|t
+t1|t
+t2|t
