@@ -87,6 +87,7 @@ TESTS += \
 	$(top_srcdir)/topology/test/regress/topogeometry_type.sql \
 	$(top_srcdir)/topology/test/regress/topojson.sql \
 	$(top_srcdir)/topology/test/regress/topologysummary.sql \
+	$(top_srcdir)/topology/test/regress/totaltopologysize.sql \
 	$(top_srcdir)/topology/test/regress/totopogeom.sql \
 	$(top_srcdir)/topology/test/regress/validatetopologyprecision.sql \
 	$(top_srcdir)/topology/test/regress/validatetopologyrelation.sql \
